--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -77,7 +77,7 @@ jobs:
         go-version: 1.22
     
     - name: Build binary
-      run: go build -v -o snippety ./cmd/snippety
+      run: go build -v -o snippety ./cmd/snippety/main.go
     
     - name: Test binary
       run: ./snippety --version || echo "Version command not implemented yet"
@@ -101,19 +101,19 @@ jobs:
         mkdir -p dist
         
         # Linux AMD64
-        GOOS=linux GOARCH=amd64 go build -o dist/snippety-linux-amd64 ./cmd/snippety
+        GOOS=linux GOARCH=amd64 go build -o dist/snippety-linux-amd64 ./cmd/snippety/main.go
         
         # Linux ARM64  
-        GOOS=linux GOARCH=arm64 go build -o dist/snippety-linux-arm64 ./cmd/snippety
+        GOOS=linux GOARCH=arm64 go build -o dist/snippety-linux-arm64 ./cmd/snippety/main.go
         
         # macOS AMD64
-        GOOS=darwin GOARCH=amd64 go build -o dist/snippety-darwin-amd64 ./cmd/snippety
+        GOOS=darwin GOARCH=amd64 go build -o dist/snippety-darwin-amd64 ./cmd/snippety/main.go
         
         # macOS ARM64 (M1/M2)
-        GOOS=darwin GOARCH=arm64 go build -o dist/snippety-darwin-arm64 ./cmd/snippety
+        GOOS=darwin GOARCH=arm64 go build -o dist/snippety-darwin-arm64 ./cmd/snippety/main.go
         
         # Windows AMD64
-        GOOS=windows GOARCH=amd64 go build -o dist/snippety-windows-amd64.exe ./cmd/snippety
+        GOOS=windows GOARCH=amd64 go build -o dist/snippety-windows-amd64.exe ./cmd/snippety/main.go
         
         # List built binaries
         ls -la dist/
