--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -77,49 +77,7 @@ jobs:
         go-version: 1.22
     
     - name: Build binary
-      run: go build -v -o snippety ./cmd/snippety/main.go
+      run: go build -v -o snippety ./cmd/snippety
     
     - name: Test binary
       run: ./snippety --version || echo "Version command not implemented yet"
-  
-  build-cross-platform:
-    runs-on: ubuntu-latest
-    needs: test
-    if: github.event_name == 'push' && (github.ref == 'refs/heads/main' || github.ref == 'refs/heads/master')
-    
-    steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
-    
-    - name: Set up Go
-      uses: actions/setup-go@v4
-      with:
-        go-version: 1.22
-    
-    - name: Build for multiple platforms
-      run: |
-        mkdir -p dist
-        
-        # Linux AMD64
-        GOOS=linux GOARCH=amd64 go build -o dist/snippety-linux-amd64 ./cmd/snippety/main.go
-        
-        # Linux ARM64  
-        GOOS=linux GOARCH=arm64 go build -o dist/snippety-linux-arm64 ./cmd/snippety/main.go
-        
-        # macOS AMD64
-        GOOS=darwin GOARCH=amd64 go build -o dist/snippety-darwin-amd64 ./cmd/snippety/main.go
-        
-        # macOS ARM64 (M1/M2)
-        GOOS=darwin GOARCH=arm64 go build -o dist/snippety-darwin-arm64 ./cmd/snippety/main.go
-        
-        # Windows AMD64
-        GOOS=windows GOARCH=amd64 go build -o dist/snippety-windows-amd64.exe ./cmd/snippety/main.go
-        
-        # List built binaries
-        ls -la dist/
-    
-    - name: Upload build artifacts
-      uses: actions/upload-artifact@v3
-      with:
-        name: cross-platform-binaries
-        path: dist/
