--- a/.gitignore
+++ b/.gitignore
@@ -32,5 +32,15 @@ go.work.sum
 # .idea/
 # .vscode/
 
+# macOS
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
 # Binary file (not the directory)
 /snippety
+snippety.exe
